--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@ body{
   overflow-x: hidden;
   max-width:100%;
   width:100%;
+  background-color: #f1f3f3;
 }
 
 
@@ -29,7 +30,7 @@ body{
   position: relative;
   position: fixed;
   top:0;
-  z-index:1000;
+  z-index:1500;
 }
 
 .container {
@@ -121,7 +122,7 @@ header img{
 }
 header h1{
   margin:0 auto 0 0;
-  font-family: 'Sawarabi Mincho', sans-serif;
+  font-family:serif;
   color: #565656;
   letter-spacing: 2px;
   font-weight: 100;
@@ -358,6 +359,7 @@ header a:hover{
   text-decoration: none;
   color: #565656;
   border: 3px solid;
+  background-color: #fff;
   box-shadow: 5px 5px 8px #c0c1c1, -5px -5px 8px #ffffff;
 }
 .title{
@@ -486,9 +488,108 @@ header a:hover{
   transform: rotateX(-90deg);
 }
 
+.svg{
+  width:100%;
+  background-color: #ffffff;
+}
+.svg svg{
+  width:100%;
+}
+
+/* principle */
+/* .principle{
+  background-color: #F5F4F4;
+  width:100%;
+  max-width: 100%;
+  position: relative;
+}
+.principle h1{
+  font-size: 80px;
+  color:white;
+  position: absolute;
+  top:50px;
+  left: 0;
+  right:0;
+  z-index: 1000;
+  text-align: center;
+}
+.principle img{
+  width: 100%;
+  height:700px;
+  clip-path: polygon(0% 0%, 100% 0, 100% 80%, 50% 100%, 0 80%);
+} */
 
 
+/*ROAD AND CARS*/
 
+/* .a-c {
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.a-c .asph {
+  background-color: grey;
+  color: white;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
+  line-height: 70px;
+}
+.a-c .road {
+  z-index: 100;
+  margin: 0;
+  position: absolute;
+  top: 5px;
+  display: inline-block;
+  padding-left: 100%;
+  white-space: nowrap;
+  line-height: 1em;
+  animation: bunbuncar 20s linear infinite;
+}
+.a-c .road p {
+  display: inline;
+  margin: 0 150px 0 0;
+}
+.a-c .road p img {
+  width: 100px;
+  height: 50px;
+}
+
+.object {
+  width: 100px;
+  height: 65px;
+}
+
+@keyframes bunbuncar {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+} */
+
+
+/* RECOMMEND */
+.recommend{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #ffffff;
+}
+.recommend img{
+  width:50%;
+}
+.recommend h2{
+  width:50%;
+  font-family:serif;
+  color: #565656;
+  text-align: center
+}
+.recommend svg{
+  width: 100%;
+}
 
 
 
