--- a/stylesheet.css
+++ b/stylesheet.css
@@ -205,7 +205,6 @@ header a:hover{
   text-align: center;
 }
 .sp-menu-list a {
-  font-size: 16px;
   display: inline-block;
   text-decoration: none;
   font-weight: normal;
@@ -239,7 +238,7 @@ header a:hover{
   opacity: 0.8;
   text-align: center;
   width: 100%;
-  height: 100%;
+  height:100%;
   font-family:serif;
 }
 .top-wrapper h1{
@@ -498,7 +497,7 @@ header a:hover{
 .recommend img{
   width:50%;
 }
-.recommend h2{
+.recommend p{
   width:50%;
   font-family:serif;
   color: #565656;
@@ -506,13 +505,17 @@ header a:hover{
   font-size: 40px;
   text-align: center;
   letter-spacing: 15px;
+  line-height: 80px;
 }
-.recommend h2 span{
+.recommend p span{
   color:#3991C8;
   background:linear-gradient(transparent 70%,#bce0f7 70%);
 }
 .recommend svg{
   width: 100%;
+}
+.order2{
+  display: none;
 }
 
 
@@ -635,7 +638,7 @@ video{
   position: relative;
 	font-weight: bold;
 	padding: 15px 30px;
-	border-radius: 30px;
+	border-radius: 50px;
 	font-size: 30px;
 	background: linear-gradient(145deg, #3238c3, #2a2fa4);
 	color: #fff;
@@ -958,6 +961,7 @@ footer h2{
 .copyright p{
   font-size: 10px;
   color:#565656;
+  margin: 0 10px 10px 0;
 }
 
 
