--- a/responsive.css
+++ b/responsive.css
@@ -9,6 +9,9 @@
   .top-wrapper h1{
     padding-top: 300px;
   }
+  .recommend img{
+    height:546px;
+  }
 }
 @media screen and (max-width:1280px){
   .top-wrapper h1{
@@ -17,11 +20,17 @@
   .tag p:nth-child(1){
     font-size: 16px;
   }
+  .recommend img{
+    height:512px;
+  }
 }
 @media screen and (max-width:1112px){
   .tag{
     width:96%;
     padding:10px 2%;
+  }
+  .recommend img{
+    height:444px;
   }
 }
 @media screen and (max-width:1024px){
@@ -36,6 +45,9 @@
   }
   .tag p{
     font-size: 14px;
+  }
+  .recommend img{
+    height:408px;
   }
 }
 @media screen and (max-width:834px){
@@ -85,6 +97,9 @@
     width:31%;
     margin:30px 1%;
   }
+  .recommend img{
+    height:332px;
+  }
 }
 @media screen and (max-width:800px){
   .top-wrapper a{
@@ -99,6 +114,9 @@
     width:60%;
     margin:40px 20%;
   }
+  .recommend img{
+    height:320px;
+  }
 }
 @media screen and (max-width:768px){
   header a{
@@ -106,6 +124,9 @@
   }
   .second-wrapper p{
     padding:0 20px 20px 20px;
+  }
+  .recommend img{
+    height:307px;
   }
 }
 @media screen and (max-width:414px){
@@ -219,6 +240,9 @@
     text-align: center;
     margin-bottom: 30px;
   }
+  .recommend img{
+    height:331px;
+  }
 }
 @media screen and (max-width:375px){
   .top-wrapper a{
@@ -242,6 +266,9 @@
     width:100%;
     margin:15px 0;
   }
+  .recommend img{
+    height:300px;
+  }
 }
 @media screen and (max-width:320px){
   .topic-title p:nth-child(2):before,.topic-title p:nth-child(2):after{
@@ -250,5 +277,8 @@
   .articles{
     width:90%;
     padding:0 5%;
+  }
+  .recommend img{
+    height:156px;
   }
 }
