--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ body{
   margin:0;
   padding:0;
   overflow-x: hidden;
+  overflow-y: hidden;
   max-width:100%;
   width:100%;
   background-color: #f1f3f3;
